# ChangeLog for dev-libs/skyutils
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/skyutils/ChangeLog,v 1.22 2007/02/09 07:32:01 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  26 Feb 2006; Alin Nastac <mrness@gentoo.org> -skyutils-2.6.ebuild,
  -skyutils-2.7.ebuild, skyutils-2.8.ebuild:
  Remove obsolete versions. Remove system packages from dependencies. Remove
  documentation files with no useful content.

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> skyutils-2.8.ebuild:
  stable on amd64

  02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> skyutils-2.8.ebuild:
  Stable on ppc.

  02 Jan 2006; Alin Nastac <mrness@gentoo.org> skyutils-2.8.ebuild:
  Stable on x86.

  11 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> skyutils-2.7.ebuild:
  Stable on ppc.

*skyutils-2.8 (06 Oct 2005)

  06 Oct 2005; Alin Nastac <mrness@gentoo.org> metadata.xml,
  -skyutils-2.5.ebuild, skyutils-2.6.ebuild, skyutils-2.7.ebuild,
  +skyutils-2.8.ebuild:
  Assign to mobile-phone herd. Remove obsolete version. Remove COPYING 
  and INSTALL from docs. Mark version 2.7 stable on x86. Version bump.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> skyutils-2.6.ebuild:
  Stable on ppc.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> skyutils-2.6.ebuild:
  stable on amd64

*skyutils-2.7 (16 Dec 2004)

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org> +skyutils-2.7.ebuild:
  Version bump.

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org> skyutils-2.6.ebuild:
  keywords ~amd64 to close bug 73496.

  23 Nov 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed digest.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> skyutils-2.5.ebuild,
  skyutils-2.6.ebuild:
  virtual/glibc -> virtual/libc
