@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST skyutils-2.8.tar.gz 357571 RMD160 0b383b07550a11805c09fcfdef9a00ecda7e2797 SHA1 d5ea2e084e3a8566d32aae5797f970b810b34f94 SHA256 724c23673f060ec14e452ff8d28a9592993d22328eac5213c780ac674d2a8518
-EBUILD skyutils-2.8.ebuild 696 RMD160 66a9b9c54e6b06ab000c83218e52935f3b0a0e6d SHA1 af9096d4f45a38f694508bfa6653c6be291455ac SHA256 01112c68dd0e68468ebaf9983c1eeab3aedc439efad2f2a2d14639c1deb5ba6f
-MD5 87ceb97c5bfd07b22adaa4c852d85f59 skyutils-2.8.ebuild 696
-RMD160 66a9b9c54e6b06ab000c83218e52935f3b0a0e6d skyutils-2.8.ebuild 696
-SHA256 01112c68dd0e68468ebaf9983c1eeab3aedc439efad2f2a2d14639c1deb5ba6f skyutils-2.8.ebuild 696
-MISC ChangeLog 2912 RMD160 c2ee87822ba98d131f561ff6ab52e84ed61ae5ad SHA1 0fcd6a3fba18bbab8d1ff18f106bf3a0ae8487fc SHA256 06b2d5cdfc833707635f51299d442d655126b6d13dcd666864aef9eb1f083108
-MD5 ff0e69c89e6bd5071a5e73cf04611fdc ChangeLog 2912
-RMD160 c2ee87822ba98d131f561ff6ab52e84ed61ae5ad ChangeLog 2912
-SHA256 06b2d5cdfc833707635f51299d442d655126b6d13dcd666864aef9eb1f083108 ChangeLog 2912
+EBUILD skyutils-2.8.ebuild 698 RMD160 3e8893c44877e024c472a1041fca5f6d64a96a0e SHA1 6978d3a0ed1bc0b51de424d6827da8f79d877b67 SHA256 9afc7d616f14a4aaf4336818b0d30c1cc5954bad4351e8fdb94c1b5fd256b36f
+MD5 0a9f010b20214ca90829c850dc149981 skyutils-2.8.ebuild 698
+RMD160 3e8893c44877e024c472a1041fca5f6d64a96a0e skyutils-2.8.ebuild 698
+SHA256 9afc7d616f14a4aaf4336818b0d30c1cc5954bad4351e8fdb94c1b5fd256b36f skyutils-2.8.ebuild 698
+MISC ChangeLog 3002 RMD160 d835083c36adc6155f2c47a38c6a152e9dcfc291 SHA1 f89cd2ec65f37c56c00eccc4555c65a0b0f78281 SHA256 eef7acc8521cc944dccbc8f3ecf996b2a16980b3dd0beba177243f6b3e3dc3d5
+MD5 f71b425264a1eb72eaddc23ca04fd74a ChangeLog 3002
+RMD160 d835083c36adc6155f2c47a38c6a152e9dcfc291 ChangeLog 3002
+SHA256 eef7acc8521cc944dccbc8f3ecf996b2a16980b3dd0beba177243f6b3e3dc3d5 ChangeLog 3002
 MISC metadata.xml 319 RMD160 741d48545d90cb4215650a19b19e9fe28b9d8750 SHA1 de9dc829f2666eef9e20d6fb9a0c4dd9190ed0b1 SHA256 4655fbf735b11176339b3ce03979c73b9912d5efdf36384dddda10cc1060178f
 MD5 336f1121ad1f2ee4c38b3fdc24534247 metadata.xml 319
 RMD160 741d48545d90cb4215650a19b19e9fe28b9d8750 metadata.xml 319
@@ -18,9 +18,9 @@ MD5 23c858f33b38f8dfc48d05ab493c639a files/digest-skyutils-2.8 238
 RMD160 ce66ed23840f6ab9660f71e2a3de5bf1ab643df4 files/digest-skyutils-2.8 238
 SHA256 2c03678067305aa3acaecef4f9abb2e8ce005a0c2744150744a89e518e17ec3e files/digest-skyutils-2.8 238
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFFzCN3AiZjviIA2XgRAhK3AKDodO9HO+qHZkEoshRSBDYKrA+XNgCgl5Xb
-tctt8Xhqx+kTK5IS1UYyxjM=
-=biND
+iD8DBQFGVAqHJnxX6mF440QRAjKcAKCDC4kHSppK937uLQWoH27qGkhSbQCfQZ+L
+tfko6uoTJ+eIWd0NVqXc54k=
+=pKh4
 -----END PGP SIGNATURE-----
