@@ -1,10 +1,10 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/skyutils/skyutils-2.8.ebuild,v 1.5 2006/02/26 08:25:06 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/skyutils/skyutils-2.8.ebuild,v 1.6 2007/05/23 09:33:52 mrness Exp $
 
 DESCRIPTION="Library of assorted C utility functions."
-HOMEPAGE="http://zekiller.skytech.org/coders_en.html"
-SRC_URI="http://zekiller.skytech.org/fichiers/${P}.tar.gz"
+HOMEPAGE="None available" # was "http://zekiller.skytech.org/coders_en.html"
+SRC_URI="mirror://gentoo/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
