@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/skyutils
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/skyutils/ChangeLog,v 1.22 2007/02/09 07:32:01 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/skyutils/ChangeLog,v 1.23 2007/05/23 09:33:52 mrness Exp $
+
+  23 May 2007; Alin Năstac <mrness@gentoo.org> skyutils-2.8.ebuild:
+  Set HOMEPAGE to N/A.
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
